<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/edit_item"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit_menu_item"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete_item"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_menu_item"
        app:showAsAction="ifRoom" />
</menu>